New conditional Java opts patch